--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Great-7</title>
-        <link rel="shortcut-icon" href="image/ms-icon-310x310.png" type="image/png">
+        <link rel="shortcut-icon" href="image/G-1 favicon-16x16.png" type="image/png">
     </head>
     <body>
         <header>     
