--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
         <link rel="shortcut-icon" href="image/g-1-favicon-16x16.png" type="image/png">
     </head>
     <body>
-        <header>     
-            <p>The Greatest-7</p>
+        <header>
+            <nav>     
+                <a href="#">Roman Mylenkyi</a>
+                <p>| The Greatest-7 |</p>
+                <a href="#">Bands</a>
+                <p> | </p>
+                <a href="#">About</a>
+                <p> | </p>
+                <a href="#">Contacts</a>
+            </nav>
         </header>
         <seaction>
             
