--- a/index.html
+++ b/index.html
@@ -8,13 +8,8 @@
     <body>
         <header>
             <nav>     
-                <a href="#">Roman Mylenkyi</a>
-                <p>| The Greatest-7 |</p>
-                <a href="#">Bands</a>
-                <p> | </p>
-                <a href="#">About</a>
-                <p> | </p>
-                <a href="#">Contacts</a>
+                <a href="#">Roman Mylenkyi</a> | The Greatest-7 | <a href="#">Bands</a>
+                 | <a href="#">About</a> | <a href="#">Contacts</a>
             </nav>
         </header>
         <seaction>
