--- a/index.html
+++ b/index.html
@@ -8,12 +8,27 @@
     <body>
         <header>
             <nav>     
-                <a href="#">Roman Mylenkyi</a> | The Greatest-7 | <a href="#">Bands</a>
+                <p>Roman Mylenkyi</p> | <a href="#">Bands</a>
                  | <a href="#">About</a> | <a href="#">Contacts</a>
             </nav>
         </header>
         <seaction>
-            
+            <table>
+                <tr>
+                    <td>
+                        <lo>
+                            <li><h1 lang="uk">Океан Ельзи</h1></li>
+                            <li><h1 lang="uk">ТАРТАК</h1></li>
+                            <li><h1 lang="uk">Скрябін</h1></li>
+                            <li><h1 lang="uk">БУМБОКС</h1></li>
+                            <li><h1 lang="uk">Скай</h1></li>
+                            <li><h1 lang="uk">Плач Єремії</h1></li>
+                            <li><h1 lang="uk">Друга ріка</h1></li>
+                        </lo>
+                    </td>
+                    <td><img="image/"</td>
+                </tr>
+            </table>
         </seaction>
     </body>
 </html>
