--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Great-7</title>
-        <link rel="shortcut-icon" href="image/g-1-favicon-16x16.png" type="image/png">
+        <link rel="shortcut-icon" href="image/g-2-favicon-16x16.png" type="image/png">
     </head>
     <body>
         <header>
@@ -16,17 +16,17 @@
             <table>
                 <tr>
                     <td>
-                        <lo>
-                            <li><h1 lang="uk">Океан Ельзи</h1></li>
-                            <li><h1 lang="uk">ТАРТАК</h1></li>
-                            <li><h1 lang="uk">Скрябін</h1></li>
-                            <li><h1 lang="uk">БУМБОКС</h1></li>
-                            <li><h1 lang="uk">Скай</h1></li>
-                            <li><h1 lang="uk">Плач Єремії</h1></li>
-                            <li><h1 lang="uk">Друга ріка</h1></li>
-                        </lo>
+                        <lu>
+                            <li><a href="#><h1 lang="uk">Океан Ельзи</h1></a></li>
+                            <li><a href="#><h1 lang="uk">ТАРТАК</h1></a></li>
+                            <li><a href="#><h1 lang="uk">Скрябін</h1></a></li>
+                            <li><a href="#><h1 lang="uk">БУМБОКС</h1></a></li>
+                            <li><a href="#><h1 lang="uk">Скай</h1</a>></li>
+                            <li><a href="#><h1 lang="uk">Плач Єремії</h1></a></li>
+                            <li><a href="#><h1 lang="uk">Друга ріка</h1></a></li>
+                        </lu>
                     </td>
-                    <td><img="image/"</td>
+                    <td><img="image/oe.jpg" width="50%" hight="100"></td>
                 </tr>
             </table>
         </seaction>
