--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <table>
                 <tr>
                     <td>
-                        <lu>
+                    <ol type=1>
                             <li><a href="#><h1 lang="uk">Океан Ельзи</h1></a></li>
                             <li><a href="#><h1 lang="uk">ТАРТАК</h1></a></li>
                             <li><a href="#><h1 lang="uk">Скрябін</h1></a></li>
@@ -24,9 +24,9 @@
                             <li><a href="#><h1 lang="uk">Скай</h1</a>></li>
                             <li><a href="#><h1 lang="uk">Плач Єремії</h1></a></li>
                             <li><a href="#><h1 lang="uk">Друга ріка</h1></a></li>
-                        </lu>
+                        </ol>
                     </td>
-                    <td><img="image/oe.jpg" width="50%" hight="100"></td>
+                    <td><img src="image/oe.jpg" width="50%" hight="100"></td>
                 </tr>
             </table>
         </seaction>
