--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             </nav>
         </header>
         <seaction>
-            <table>
+            <table width="100%" cellpading="100%" cellspacing="0" border="1">
                 <tr>
-                    <td>
-                    <ol type=1>
+                    <td width="50%">
+                    <ol type="1" aline="center">
                             <li><a href="#><h1 lang="uk">Океан Ельзи</h1></a></li>
                             <li><a href="#><h1 lang="uk">ТАРТАК</h1></a></li>
                             <li><a href="#><h1 lang="uk">Скрябін</h1></a></li>
@@ -26,7 +26,7 @@
                             <li><a href="#><h1 lang="uk">Друга ріка</h1></a></li>
                         </ol>
                     </td>
-                    <td><img src="image/oe.jpg" width="50%" hight="100"></td>
+                    <td width="50%"><img src="image/oe.jpg"></td>
                 </tr>
             </table>
         </seaction>
