--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             <table width="100%" cellpading="100%" cellspacing="0" border="1">
                 <tr>
                     <td width="50%">
-                    <ol type="1" aline="center">
-                            <li><a href="#><h1 lang="uk">Океан Ельзи</h1></a></li>
-                            <li><a href="#><h1 lang="uk">ТАРТАК</h1></a></li>
-                            <li><a href="#><h1 lang="uk">Скрябін</h1></a></li>
-                            <li><a href="#><h1 lang="uk">БУМБОКС</h1></a></li>
-                            <li><a href="#><h1 lang="uk">Скай</h1</a>></li>
-                            <li><a href="#><h1 lang="uk">Плач Єремії</h1></a></li>
-                            <li><a href="#><h1 lang="uk">Друга ріка</h1></a></li>
+                        <ol type="1" aline="center">
+                            <li><h1 lang="uk"><a href="#">Океан Ельзи</a></h1></li>
+                            <li><h1 lang="uk"><a href="#">ТАРТАК</a></h1></li>
+                            <li><h1 lang="uk"><a href="#">Скрябін</a></h1></li>
+                            <li><h1 lang="uk"><a href="#">БУМБОКС</a></h1></li>
+                            <li><h1 lang="uk"><a href="#">Скай</a></h1></li>
+                            <li><h1 lang="uk"><a href="#">Плач Єремії</a></h1></li>
+                            <li><h1 lang="uk"><a href="#">Друга ріка</a></h1></li>
                         </ol>
                     </td>
                     <td width="50%"><img src="image/oe.jpg"></td>
