--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
         <title>Great-7</title>
         <link rel="shortcut-icon" href="image/g-2-favicon-16x16.png" type="image/png">
     </head>
-    <body>
+    <body bgcolor="black">
         <header>
             <nav>     
-                <p>Roman Mylenkyi</p> | <a href="#">Bands</a>
+                <p>Roman Mylenkyi | <a href="#">Bands</a>
                  | <a href="#">About</a> | <a href="#">Contacts</a>
+                 </p>
             </nav>
         </header>
         <seaction>
-            <table width="100%" cellpading="100%" cellspacing="0" border="1">
+            <table width="100%" cellpading="100" cellspacing="0" border="1">
                 <tr>
                     <td width="50%">
-                        <ol type="1" aline="center">
+                        <ol type="1" aline="center" color="white">
                             <li><h1 lang="uk"><a href="#">Океан Ельзи</a></h1></li>
                             <li><h1 lang="uk"><a href="#">ТАРТАК</a></h1></li>
                             <li><h1 lang="uk"><a href="#">Скрябін</a></h1></li>
