--- a/index.html
+++ b/index.html
@@ -14,20 +14,18 @@
             </nav>
         </header>
         <seaction>
-            <table width="100%" cellpading="100" cellspacing="0" border="1">
+            <table width="1200" cellpading="100" cellspacing="0" border="1">
                 <tr>
-                    <td width="50%">
-                        <ol type="1" aline="center" color="white">
-                            <li><h1 lang="uk"><a href="#">Океан Ельзи</a></h1></li>
-                            <li><h1 lang="uk"><a href="#">ТАРТАК</a></h1></li>
-                            <li><h1 lang="uk"><a href="#">Скрябін</a></h1></li>
-                            <li><h1 lang="uk"><a href="#">БУМБОКС</a></h1></li>
-                            <li><h1 lang="uk"><a href="#">Скай</a></h1></li>
-                            <li><h1 lang="uk"><a href="#">Плач Єремії</a></h1></li>
-                            <li><h1 lang="uk"><a href="#">Друга ріка</a></h1></li>
-                        </ol>
+                    <td width="600">
+                        <h1 lang="uk"><a href="#">Океан Ельзи</a></h1>
+                        <h1 lang="uk"><a href="#">ТАРТАК</a></h1>
+                        <h1 lang="uk"><a href="#">Скрябін</a></h1>
+                        <h1 lang="uk"><a href="#">БУМБОКС</a></h1>
+                        <h1 lang="uk"><a href="#">Скай</a></h1>
+                        <h1 lang="uk"><a href="#">Плач Єремії</a></h1>
+                        <h1 lang="uk"><a href="#">Друга ріка</a></h1>
                     </td>
-                    <td width="50%"><img src="image/oe.jpg"></td>
+                    <td width="600"><img src="image/oe.jpg"></td>
                 </tr>
             </table>
         </seaction>
