--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <seaction>
             <table width="1200" cellpading="100" cellspacing="0" border="1">
                 <tr>
-                    <td width="600">
-                        <h1 lang="uk"><a href="#">Океан Ельзи</a></h1>
+                    <td width="600" align="center">
+                        <h1 lang="uk" color="white"><a href="#"><span>  01 </span>Океан Ельзи</a></h1>
                         <h1 lang="uk"><a href="#">ТАРТАК</a></h1>
                         <h1 lang="uk"><a href="#">Скрябін</a></h1>
                         <h1 lang="uk"><a href="#">БУМБОКС</a></h1>
