--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
             </nav>
         </header>
         <seaction>
-            <table width="1200" cellpading="100" cellspacing="0" border="1">
+            <table width="1400" cellpading="600" cellspacing="0" border="0">
                 <tr>
-                    <td width="600" align="center">
+                    <td width="100"
+                    <td width="600" align="left">
                         <h1 lang="uk" color="white"><a href="#"><span>  01 </span>Океан Ельзи</a></h1>
                         <h1 lang="uk"><a href="#">ТАРТАК</a></h1>
                         <h1 lang="uk"><a href="#">Скрябін</a></h1>
@@ -25,7 +26,7 @@
                         <h1 lang="uk"><a href="#">Плач Єремії</a></h1>
                         <h1 lang="uk"><a href="#">Друга ріка</a></h1>
                     </td>
-                    <td width="600"><img src="image/oe.jpg" width="600"></td>
+                    <td width="700"><img src="image/oe.jpg" width="700"></td>
                 </tr>
             </table>
         </seaction>
