--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <seaction>
             <table width="1400" cellpading="600" cellspacing="0" border="0">
                 <tr>
-                    <td width="100"
+                    <td width="100"></td>
                     <td width="600" align="left">
                         <h1 lang="uk" color="white"><a href="#"><span>  01 </span>Океан Ельзи</a></h1>
                         <h1 lang="uk"><a href="#">ТАРТАК</a></h1>
