--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <body bgcolor="black">
         <header>
             <nav>     
-                <p>Roman Mylenkyi | <a href="#">Bands</a>
-                 | <a href="#">About</a> | <a href="#">Contacts</a>
+                <p><span>Roman Mylenkyi   </span><a href="#">Bands</a>
+                   <a href="#">About</a>   <a href="#">Contacts</a>
                  </p>
             </nav>
         </header>
@@ -26,7 +26,7 @@
                         <h1 lang="uk"><a href="#">Плач Єремії</a></h1>
                         <h1 lang="uk"><a href="#">Друга ріка</a></h1>
                     </td>
-                    <td width="700"><img src="image/oe.jpg" width="700"></td>
+                    <td width="700"><img src="image/skrjabin.jpg" width="700"></td>
                 </tr>
             </table>
         </seaction>
