--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Great-7</title>
         <link rel="shortcut-icon" href="image/g-2-favicon-16x16.png" type="image/png">
     </head>
-    <body bgcolor="black">
+    <body>
         <header>
             <nav>     
                 <p><span>Roman Mylenkyi   </span><a href="#">Bands</a>
