--- a/index.html
+++ b/index.html
@@ -3,32 +3,63 @@
     <head>
         <meta charset="utf-8">
         <title>Great-7</title>
-        <link rel="shortcut-icon" href="image/g-2-favicon-16x16.png" type="image/png">
+        <link rel="stylesheet" href="css/index.css"> 
+        <link rel="shortcut-icon" href="images/ico/g-2-favicon-16x16.png" type="image/png">
     </head>
     <body>
         <header>
             <nav>     
-                <p><span>Roman Mylenkyi   </span><a href="#">Bands</a>
+                <p><a href="#">Bands</a>
                    <a href="#">About</a>   <a href="#">Contacts</a>
                  </p>
             </nav>
         </header>
-        <seaction>
-            <table width="1400" cellpading="600" cellspacing="0" border="0">
-                <tr>
-                    <td width="100"></td>
-                    <td width="600" align="left">
-                        <h1 lang="uk" color="white"><a href="#"><span>  01 </span>Океан Ельзи</a></h1>
-                        <h1 lang="uk"><a href="#">ТАРТАК</a></h1>
-                        <h1 lang="uk"><a href="#">Скрябін</a></h1>
-                        <h1 lang="uk"><a href="#">БУМБОКС</a></h1>
-                        <h1 lang="uk"><a href="#">Скай</a></h1>
-                        <h1 lang="uk"><a href="#">Плач Єремії</a></h1>
-                        <h1 lang="uk"><a href="#">Друга ріка</a></h1>
-                    </td>
-                    <td width="700"><img src="image/skrjabin.jpg" width="700"></td>
-                </tr>
-            </table>
-        </seaction>
+        <section class="row">
+					<ul class="bands-list" >
+						<li bands-description="Океан Ельзи — ..."
+							description="Коротко про гурт Океан Ельзи"
+							image="images/bands/oe/oe.jpg" style="opacity: 1">
+							<a href="#"><span>01</span>Океан Ельзи</a>
+							<img class="light-icon" src="imagesg/ico/favicon-32x32.png">
+						</li>
+						<li bands-description="Скрябін — ..."
+							description="Коротко про гурт Скрябіна"
+							image="images/bands/skrjabin/skrjabin.jpg">
+							<a href="#"><span>02</span>Скрябін</a>
+							<img class="light-icon" src="imagesg/ico/favicon-32x32.png">
+						</li>
+						<li bands-description="Тартак — ..."
+							description="Коротко про гурт Тартак"
+							image="images/bands/tartak/tartak.jpg">
+							<a href="#"><span>03</span>Тартак</a>
+							<img class="light-icon" src="imagesg/ico/favicon-32x32.png">
+						</li>	
+						<li bands-description="Бумбокс — ..."
+							description="Коротко про гурт Бумбокс"
+							image="images/bands/bumbox/bumbox.jpg">
+							<a href="#"><span>04</span>Бумбокс</a>
+							<img class="light-icon" src="imagesg/ico/favicon-32x32.png">
+						</li>
+						<li bands-description="Скай — ..."
+							description="Коротко про гурт Скай"
+							image="images/bands/skaj/skaj.jpg">
+							<a href="#"><span>05</span>Скай</a>
+							<img class="light-icon" src="imagesg/ico/favicon-32x32.png">
+						</li>
+						<li
+							bands-description="ТНМК — ..."
+							description="Коротко про гурт ТНМК"
+							image="images/bands/tnmk/tnmk.jpg">
+							<a href="#"><span>06</span>ТНМК</a>
+							<img class="light-icon" src="imagesg/ico/favicon-32x32.png">
+						</li>
+						<li bands-description="Плач Єремії — ..."
+							description="Коротко про гурт Плач Єремії"
+							image="images/bands/pe/pe.jpg">
+							<a href="#"><span>07</span>Плач Єремії</a>
+							<img class="light-icon" src="imagesg/ico/favicon-32x32.png">
+						</li>
+					</ul>
+			</section>
     </body>
 </html>
