--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Great-7</title>
-        <link rel="stylesheet" href="css/index.css"> 
+        <link rel="stylesheet" href="css/index.css" type="text/css"> 
         <link rel="shortcut-icon" href="images/ico/g-2-favicon-16x16.png" type="image/png">
     </head>
     <body>
