--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Great-7</title>
-        <link rel="stylesheet" href="css/index.css" type="text/css"> 
-        <link rel="shortcut-icon" href="images/ico/g-2-favicon-16x16.png" type="image/png">
+        <link href="css/index.css" rel="stylesheet" type="text/css"> 
+        <link href="images/ico/g-2-favicon-16x16.png" rel="shortcut-icon" type="image/png">
     </head>
     <body>
         <header>
             <nav>     
                 <p><a href="#">Bands</a>
-                   <a href="#">About</a>   <a href="#">Contacts</a>
+                   <a href="#">About</a>   
+                   <a href="#">Contacts</a>
                  </p>
             </nav>
         </header>
