--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Great-7</title>
-        <link href="css/index.css" rel="stylesheet" type="text/css"> 
-        <link href="images/ico/g-2-favicon-16x16.png" rel="shortcut-icon" type="image/png">
+        <link rel="stylesheet" href="index.css" type="text/css"> 
+        <link  rel="shortcut icon" href="images/ico/g-2-favicon-16x16.png" type="image/png">
     </head>
     <body>
         <header>
