--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <title>Great-7</title>
         <link rel="stylesheet" href="index.css" type="text/css"> 
         <link  rel="shortcut icon" href="images/ico/g-2-favicon-16x16.png" type="image/png">
-       <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&amp;subset=cyrillic,cyrillic-ext,greek" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&amp;subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC|Poiret+One|Righteous|Six+Caps&amp;subset=cyrillic" rel="stylesheet">
     </head>
     <body>
         <header>
