--- a/index.html
+++ b/index.html
@@ -23,44 +23,44 @@
 							description="Коротко про гурт Океан Ельзи"
 							image="images/bands/oe/oe.jpg" style="opacity: 1">
 							<a href="#"><span>01 &ensp;</span>Океан Ельзи</a>
-							<img class="light-icon" src="imagesg/ico/favicon-32x32.png">
+							<span id="arrow">&ensp;&ensp;&#10070;</span>
 						</li>
 						<li bands-description="Скрябін — ..."
 							description="Коротко про гурт Скрябіна"
 							image="images/bands/skrjabin/skrjabin.jpg">
 							<a href="#"><span>02 &ensp;</span>Скрябін</a>
-							<img class="light-icon" src="imagesg/ico/favicon-32x32.png">
+							<span id="arrow">&ensp;&ensp;&#10070;</span>
 						</li>
 						<li bands-description="Тартак — ..."
 							description="Коротко про гурт Тартак"
 							image="images/bands/tartak/tartak.jpg">
 							<a href="#"><span>03 &ensp;</span>Тартак</a>
-							<img class="light-icon" src="imagesg/ico/favicon-32x32.png">
+							<span id="arrow">&ensp;&ensp;&#10070;</span>
 						</li>	
 						<li bands-description="Бумбокс — ..."
 							description="Коротко про гурт Бумбокс"
 							image="images/bands/bumbox/bumbox.jpg">
 							<a href="#"><span>04 &ensp;</span>Бумбокс</a>
-							<img class="light-icon" src="imagesg/ico/favicon-32x32.png">
+							<span id="arrow">&ensp;&ensp;&#10070;</span>
 						</li>
 						<li bands-description="Скай — ..."
 							description="Коротко про гурт Скай"
 							image="images/bands/skaj/skaj.jpg">
 							<a href="#"><span>05 &ensp;</span>Скай</a>
-							<img class="light-icon" src="imagesg/ico/favicon-32x32.png">
+							<span id="arrow">&ensp;&ensp;&#10070;</span>
 						</li>
 						<li
 							bands-description="ТНМК — ..."
 							description="Коротко про гурт ТНМК"
 							image="images/bands/tnmk/tnmk.jpg">
 							<a href="#"><span>06 &ensp;</span>ТНМК</a>
-							<img class="light-icon" src="imagesg/ico/favicon-32x32.png">
+							<span id="arrow">&ensp;&ensp;&#10070;</span>
 						</li>
 						<li bands-description="Плач Єремії — ..."
 							description="Коротко про гурт Плач Єремії"
 							image="images/bands/pe/pe.jpg">
 							<a href="#"><span>07 &ensp;</span>Плач Єремії</a>
-							<img class="light-icon" src="imagesg/ico/favicon-32x32.png">
+							<span id="arrow">&ensp;&ensp;&#10070;</span>
 						</li>
 					</ul>
 			</section>
