add arrows lighying

--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
             </nav>
         </header>
         <section class="row">
+        	<img src="images/bands/oe/oe.jpg"></image>
 					<ul class="bands-list" >
 						<li bands-description="Океан Ельзи — ..."
 							description="Коротко про гурт Океан Ельзи"
-							image="images/bands/oe/oe.jpg" style="opacity: 1">
+							src="images/bands/oe/oe.jpg" style="opacity: 1">
 							<a href="#"><span>01 &ensp;</span>Океан Ельзи</a>
 							<span id="arrow">&ensp;&ensp;&#10070;</span>
 						</li>
