--- a/index.html
+++ b/index.html
@@ -18,52 +18,73 @@
             </nav>
         </header>
         <section class="row">
-        	<img src="images/bands/oe/oe.jpg"></image>
+        	<article class="bands-list">
 					<ul class="bands-list" >
 						<li bands-description="Океан Ельзи — ..."
-							description="Коротко про гурт Океан Ельзи"
-							src="images/bands/oe/oe.jpg" style="opacity: 1">
-							<a href="#"><span>01 &ensp;</span>Океан Ельзи</a>
+							description="Коротко про гурт Океан Ельзи">
+							<a href="#"><span style="opacity: 1">01 &ensp;</span>Океан Ельзи</a>
 							<span id="arrow">&ensp;&ensp;&#10070;</span>
+							<img class="img-bands-1" src="images/bands/oe/oe.jpg" style="opacity: 1">
 						</li>
 						<li bands-description="Скрябін — ..."
-							description="Коротко про гурт Скрябіна"
-							image="images/bands/skrjabin/skrjabin.jpg">
-							<a href="#"><span>02 &ensp;</span>Скрябін</a>
+							description="Коротко про гурт Скрябіна">
+							<a href="#skrjabin-1"><span>02 &ensp;</span>Скрябін</a>
 							<span id="arrow">&ensp;&ensp;&#10070;</span>
 						</li>
 						<li bands-description="Тартак — ..."
-							description="Коротко про гурт Тартак"
-							image="images/bands/tartak/tartak.jpg">
+							description="Коротко про гурт Тартак">
 							<a href="#"><span>03 &ensp;</span>Тартак</a>
 							<span id="arrow">&ensp;&ensp;&#10070;</span>
 						</li>	
 						<li bands-description="Бумбокс — ..."
-							description="Коротко про гурт Бумбокс"
-							image="images/bands/bumbox/bumbox.jpg">
+							description="Коротко про гурт Бумбокс">
 							<a href="#"><span>04 &ensp;</span>Бумбокс</a>
 							<span id="arrow">&ensp;&ensp;&#10070;</span>
 						</li>
 						<li bands-description="Скай — ..."
-							description="Коротко про гурт Скай"
-							image="images/bands/skaj/skaj.jpg">
+							description="Коротко про гурт Скай">
 							<a href="#"><span>05 &ensp;</span>Скай</a>
 							<span id="arrow">&ensp;&ensp;&#10070;</span>
 						</li>
 						<li
 							bands-description="ТНМК — ..."
 							description="Коротко про гурт ТНМК"
-							image="images/bands/tnmk/tnmk.jpg">
 							<a href="#"><span>06 &ensp;</span>ТНМК</a>
 							<span id="arrow">&ensp;&ensp;&#10070;</span>
 						</li>
 						<li bands-description="Плач Єремії — ..."
 							description="Коротко про гурт Плач Єремії"
-							image="images/bands/pe/pe.jpg">
 							<a href="#"><span>07 &ensp;</span>Плач Єремії</a>
 							<span id="arrow">&ensp;&ensp;&#10070;</span>
 						</li>
 					</ul>
-			</section>
+			</article>
+			<article class="image-bands">
+				<ul>
+					<li>
+						<img id="skrjabin-1"src="images/bands/skrjabin/skrjabin.jpg">	
+					</li>
+					<li>
+						<img id="tartak-1" src="images/bands/tartak/tartak.jpg">
+					</li>
+					<li>
+						<img id="bumbox-1" src="images/bands/bumbox/bumbox.jpg">	
+					</li>
+					<li>
+						<img id="skaj-1" src="images/bands/skaj/skaj.jpg">	
+					</li>
+					<li>
+						<img id="tnmk-1" src="images/bands/tnmk/tnmk.jpg">	
+					</li>
+					<li>
+						<img id="pe-1" src="images/bands/pe/pe.jpg">	
+					</li>
+				</ul>	
+			</article>
+			<article class="about-bands">
+				
+			</article>
+			
+		</section>
     </body>
 </html>
