--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC|Poiret+One|Righteous|Six+Caps&amp;subset=cyrillic" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=EB+Garamond|Oranienbaum|PT+Serif|Tinos" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
@@ -71,39 +72,39 @@
 						як краща рок-група і краща live-група СНД і Східної Європи.</p>
 					</li> 
 					<li><div class="border-img">
-						<img id="skrjabin-1" src="$$$$$$$$$$images/bands/skrjabin/skrjabin.jpg">
+						<img id="skrjabin-1" src="-------images/bands/skrjabin/skrjabin.jpg">
 						</div>
-						<p class="about">«Скрябін» — український музичний гурт, що за час своєї творчої активності 
+						<p class="about" style="display: none">«Скрябін» — український музичний гурт, що за час своєї творчої активності 
 						пройшов шлях від синті-попу, постпанку і техно до нової романтики та поп-року.</p>
 					</li> 	
 					<li><div class="border-img">
 						<img id="tartak-1" style="display: none" src="images/bands/tartak/tartak.jpg">
 						</div>
-						<p class="about">«Скрябін» — український музичний гурт,так щільно посів своє місце в українській музиці, 
+						<p class="about" style="display: none">«Тартак» — український музичний гурт,так щільно посів своє місце в українській музиці, 
 						що здається став органічною частиною життя.  Жанр - альтернативний рок, репкор панк-рок, реп-рок та фанк.</p>
 					</li>
 					<li><div class="border-img">
 						<img id="skaj-1" style="display: none" src="images/bands/skaj/skaj.jpg">
 						</div>
-						<p class="about">«СКАЙ» — український музичний гурт, основними трьома напрямками якого є альтернативний рок, 
+						<p class="about" style="display: none">«СКАЙ» — український музичний гурт, основними трьома напрямками якого є альтернативний рок, 
 						поп-рок та риси нової хвилі пост-панку. </p>
 					</li>
 					<li><div class="border-img">
 						<img id="bumbox-1" style="display: none" src="images/bands/bumbox/bumbox.jpeg">
 						</div>
-						<p class="about">"Бумбокс" - український хіп-хоп і фанкі-ґрув гурт, нової генерації 
+						<p class="about" style="display: none">"Бумбокс" - український хіп-хоп і фанкі-ґрув гурт, нової генерації 
 						із дужу самобутнім виконанням пісень.</p>
 					</li>
 					<li><div class="border-img">
 						<img id="tnmk-1" style="display: none" src="images/bands/tnmk/tnmk.jpg">
 						</div>
-						<p class="about">«Танок на Майдані Конґо» («ТНМК») — український гурт, що виконує музику 
+						<p class="about" style="display: none">«Танок на Майдані Конґо» («ТНМК») — український гурт, що виконує музику 
 						в стилях репкор, хіп-хоп, рок та фанк. </p>
 					</li>
 					<li><div class="border-img">
 						<img id="pt-1" style="display: none" src="images/bands/pt/[pt.jpeg">
 						</div>
-						<p class="about">«Піккарді́йська Те́рція» (Вокальна формація «Піккардійська Терція») 
+						<p class="about" style="display: none">«Піккарді́йська Те́рція» (Вокальна формація «Піккардійська Терція») 
 						— українська акапельна формація - справжнє явище в українській музичній культурі.</p>
 					</li>
 				</ul>
