--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
 			<article class="col2">
 				<ul class="img-bands-about">
 					<li><div class="border-img">
-						<img id="oe-1" src="images/bands/oe/oe.jpg" style="Z-index: 1">
+						<img id="oe-1" src="images/bands/oe/oe1.jpg" style="Z-index: 1">
 						</div>
 						<p class="about">"Океан Ельзи" - багаторазово визнані публікою й критиками 
 						як краща рок-група і краща live-група СНД і Східної Європи.</p>
 					</li> 
 					<li><div class="border-img">
-						<img id="skrjabin-1" src="-------images/bands/skrjabin/skrjabin.jpg">
+						<img id="skrjabin-1" src="images/bands/skrjabin/skrjabin.jpg">
 						</div>
 						<p class="about" style="display: none">«Скрябін» — український музичний гурт, що за час своєї творчої активності 
 						пройшов шлях від синті-попу, постпанку і техно до нової романтики та поп-року.</p>
