--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <body>
         <header>
             <nav>     
-                <p class="menu"><a class="menu-button" href="#">Bands &ensp;&nbsp;</a>
-                   <a class="menu-button" href="#">About &ensp;&nbsp;</a>   
-                   <a class="menu-button" href="#">Contacts</a>
+                <p class="menu">
+                   	<a class="menu-button" href="https://romanmyl.github.io/g-1-oe/">Bands &ensp;&nbsp;</a>
+                	<a class="menu-button" href="#">About &ensp;&nbsp;</a>   
+                	<a class="menu-button" href="#">Contacts</a>
                 </p>
             </nav>
         </header>
@@ -24,7 +25,7 @@
         	<article class="col1"> 
 					<ul class="list">
 						<li id="oe-list">
-							<a id="oe" href="#"><span class="number-list">01 &ensp;</span>Океан Ельзи
+							<a id="oe" href="https://romanmyl.github.io/g-1-oe/"><span class="number-list">01 &ensp;</span>Океан Ельзи
 							<span class="arrow">&ensp;&ensp;&#10070;</span>
 							</a>
 						</li>
@@ -71,7 +72,7 @@
 						як краща рок-група і краща live-група СНД і Східної Європи.</p>
 					</li> 
 					<li><div class="border-img">
-						<img id="skrjabin-img" src="images/bands/skrjabin/skrjabin-1.jpg">
+						<img id="skrjabin-img" style="display: none" src="images/bands/skrjabin/skrjabin-1.jpg">
 						</div>
 						<p class="about" style="opacity: 0;">«Скрябін» — український музичний гурт, що за час своєї творчої активності 
 						пройшов шлях від синті-попу, постпанку і техно до нової романтики та поп-року.</p>
