--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header>
             <nav>     
                 <p class="menu">
-                   	<a class="menu-button" href="https://romanmyl.github.io/g-1/oe/oe.html">Bands &ensp;&nbsp;</a>
+                   	<a class="menu-button" href="https://romanmyl.github.io/g-1/oe.html">Bands &ensp;&nbsp;</a>
                 	<a class="menu-button" href="#">About &ensp;&nbsp;</a>   
                 	<a class="menu-button" href="#">Contacts</a>
                 </p>
