--- a/oe.html
+++ b/oe.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>     
-            <p><a href="https://romanmyl.github.io/g-1/index.html">Bands &ensp;&nbsp;</a>
+            <p><a href="index.html">Bands &ensp;&nbsp;</a>
                <a href="#">About &ensp;&nbsp;</a>   
                <a href="#">Contacts</a>
             </p>
