--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header>
             <nav>     
                 <p class="menu">
-                   	<a class="menu-button" href="https://romanmyl.github.io/g-1/oe.html">Bands &ensp;&nbsp;</a>
+                   	<a class="menu-button" href="oe.html">Bands &ensp;&nbsp;</a>
                 	<a class="menu-button" href="#">About &ensp;&nbsp;</a>   
                 	<a class="menu-button" href="#">Contacts</a>
                 </p>
@@ -25,7 +25,7 @@
         	<article class="col1"> 
 					<ul class="list">
 						<li id="oe-list">
-							<a id="oe" href="https://romanmyl.github.io/g-1/oe.html"><span class="number-list">01 &ensp;</span>Океан Ельзи
+							<a id="oe" href="oe.html"><span class="number-list">01 &ensp;</span>Океан Ельзи
 							<span class="arrow">&ensp;&ensp;&#10070;</span>
 							</a>
 						</li>
