make changing immages and its discriptions

--- a/index.html
+++ b/index.html
@@ -24,39 +24,39 @@
         <section class="row">
         	<article class="col1"> 
 					<ul class="list">
-						<li id="oe-list">
-							<a id="oe" href="oe.html"><span class="number-list">01 &ensp;</span>Океан Ельзи
+						<li id="oe" >
+							<a href="oe.html"><span class="number-list">01 &ensp;</span>Океан Ельзи
 							<span class="arrow">&ensp;&ensp;&#10070;</span>
 							</a>
 						</li>
-						<li>
-							<a id="skrjabin" href="#skrjabin-1"><span class="number-list">02 &ensp;</span>Скрябін
+						<li id="skrjabin">
+							<a href="#skrjabin-1"><span class="number-list">02 &ensp;</span>Скрябін
 							<span class="arrow">&ensp;&ensp;&#10070;</span>
 							</a>	
 						</li>
-						<li>
-							<a id="tartak"	href="#"><span class="number-list">03 &ensp;</span>Тартак
+						<li id="tartak">
+							<a	href="#"><span class="number-list">03 &ensp;</span>Тартак
 							<span class="arrow">&ensp;&ensp;&#10070;</span>
 							</a>
 						</li>
-						<li>
-							<a id="skaj" href="#"><span class="number-list">04 &ensp;</span>Скай
+						<li id="skaj">
+							<a href="#"><span class="number-list">04 &ensp;</span>Скай
 							<span class="arrow">&ensp;&ensp;&#10070;</span>
 							</a>
 						</li>
-						<li>
-							<a id="bumbox"	href="#"><span class="number-list">05 &ensp;</span>Бумбокс
+						<li id="bumbox">
+							<a	href="#"><span class="number-list">05 &ensp;</span>Бумбокс
 							<span class="arrow">&ensp;&ensp;&#10070;</span>
 							</a>
 						</li>
 						
-						<li>
-							<a id="tnmk" href="#"><span class="number-list">06 &ensp;</span>ТНМК
+						<li id="tnmk">
+							<a href="#"><span class="number-list">06 &ensp;</span>ТНМК
 							<span class="arrow">&ensp;&ensp;&#10070;</span>
 							</a>
 						</li>
-						<li>
-							<a id="pt" href="#"><span class="number-list">07 &ensp;</span>Піккардійська <span class="arrow"> &ensp;&ensp;&#10070;</span>
+						<li id="pt">
+							<a href="#"><span class="number-list">07 &ensp;</span>Піккардійська <span class="arrow"> &ensp;&ensp;&#10070;</span>
 							<br> &ensp;&ensp;Терція
 							</a>
 						</li>
@@ -66,55 +66,66 @@
 			<article class="col2">
 				<ul class="img-bands-about">
 					<li><div class="border-img">
-						<img id="oe-img" src="images/bands/oe/oe1.jpg" style="Z-index: 1">
+							<img id="pt-img" src="images/bands/pt/pt.jpg">
 						</div>
-						<p class="about">"Океан Ельзи" - багаторазово визнані публікою й критиками 
-						як краща рок-група і краща live-група СНД і Східної Європи.</p>
-					</li> 
-					<li><div class="border-img">
-						<img id="skrjabin-img" style="display: none" src="images/bands/skrjabin/skrjabin-1.jpg">
-						</div>
-						<p class="about" style="opacity: 0;">«Скрябін» — український музичний гурт, що за час своєї творчої активності 
-						пройшов шлях від синті-попу, постпанку і техно до нової романтики та поп-року.</p>
-					</li> 	
-					<li><div class="border-img">
-						<img id="tartak-img" style="display: none" src="images/bands/tartak/tartak.jpg">
-						</div>
-						<p class="about" style="display: none">«Тартак» — український музичний гурт,так щільно посів своє місце в українській музиці, 
-						що здається став органічною частиною життя.  Жанр - альтернативний рок, репкор панк-рок, реп-рок та фанк.</p>
+						<p class="about" id="pt-about">«Піккарді́йська Те́рція» (Вокальна формація «Піккардійська Терція») 
+						— українська акапельна формація - справжнє явище в українській музичній культурі.</p>
 					</li>
 					<li><div class="border-img">
-						<img id="skaj-img" style="display: none" src="images/bands/skaj/skaj.jpg">
+							<img id="tnmk-img" src="images/bands/tnmk/tnmk.jpg">
 						</div>
-						<p class="about" style="display: none">«СКАЙ» — український музичний гурт, основними трьома напрямками якого є альтернативний рок, 
-						поп-рок та риси нової хвилі пост-панку. </p>
-					</li>
-					<li><div class="border-img">
-						<img id="bumbox-img" style="display: none" src="images/bands/bumbox/bumbox.jpeg">
-						</div>
-						<p class="about" style="display: none">"Бумбокс" - український хіп-хоп і фанкі-ґрув гурт, нової генерації 
-						із дужу самобутнім виконанням пісень.</p>
-					</li>
-					<li><div class="border-img">
-						<img id="tnmk-img" style="display: none" src="images/bands/tnmk/tnmk.jpg">
-						</div>
-						<p class="about" style="display: none">«Танок на Майдані Конґо» («ТНМК») — український гурт, що виконує музику 
+						<p class="about" id="tnmk-about">«Танок на Майдані Конґо» («ТНМК») — український гурт, що виконує музику 
 						в стилях репкор, хіп-хоп, рок та фанк. </p>
 					</li>
 					<li><div class="border-img">
-						<img id="pt-img" style="display: none" src="images/bands/pt/[pt.jpeg">
+							<img id="bumbox-img" src="images/bands/bumbox/bumbox.jpeg">
 						</div>
-						<p class="about" style="display: none">«Піккарді́йська Те́рція» (Вокальна формація «Піккардійська Терція») 
-						— українська акапельна формація - справжнє явище в українській музичній культурі.</p>
+						<p class="about" id="bumbox-about">"Бумбокс" - український хіп-хоп і фанкі-ґрув гурт, нової генерації 
+						із дужу самобутнім виконанням пісень.</p>
 					</li>
+					<li><div class="border-img">
+							<img id="skaj-img" src="images/bands/skaj/skaj.jpg">
+						</div>
+						<p class="about" id="skaj-about">«СКАЙ» — український музичний гурт, основними трьома напрямками якого є альтернативний рок, 
+						поп-рок та риси нової хвилі пост-панку. </p>
+					</li> 	
+					<li><div class="border-img">
+							<img id="tartak-img" src="images/bands/tartak/tartak.jpg">
+						</div>
+						<p class="about" id="tartak-about">«Тартак» — український музичний гурт,так щільно посів своє місце в українській музиці, 
+						що здається став органічною частиною життя.  Жанр - альтернативний рок, репкор панк-рок, реп-рок та фанк.</p>
+					</li> 
+					<li><div class="border-img">
+							<img id="skrjabin-img" src="images/bands/skrjabin/skrjabin-1.jpg">
+						</div>
+						<p class="about" id="skrjabin-about">«Скрябін» — український музичний гурт, що за час своєї творчої активності 
+						пройшов шлях від синті-попу, постпанку і техно до нової романтики та поп-року.</p>
+					</li>
+					<li><div class="border-img">
+							<img id="oe-img" src="images/bands/oe/oe1.jpg">
+						</div>
+						<p class="about" id="oe-about">"Океан Ельзи" - багаторазово визнані публікою й критиками 
+						як краща рок-група і краща live-група СНД і Східної Європи.</p>
+					</li>
+					<li><div class="border-img">
+							<img sytle="z-index: 1;" src="images/bands/oe/oe1.jpg">
+							<p id="background-about">"Океан Ельзи" - багаторазово визнані публікою й критиками 
+						як краща рок-група і краща live-група СНД і Східної Європи.</p>
+						</div>
+						</li>
+			
 				</ul>
 			</article>
 			
 		</section>
+		
 		<script
-  src="https://code.jquery.com/jquery-3.1.1.min.js"
-  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-  crossorigin="anonymous"></script>
-<script type="text/javascript" src="js/index.js"></script> 
+			src="https://code.jquery.com/jquery-3.1.1.min.js"
+			integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+			crossorigin="anonymous"></script>
+		<script type="text/javascript" src="js/index.js"></script> 
+	
+		
+
     </body>
 </html>
